--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "test-user": {
+    "usuarios-web-angular-jwt": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/test-user",
+            "outputPath": "dist/usuarios-web-angular-jwt",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "test-user:build"
+            "browserTarget": "usuarios-web-angular-jwt:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "test-user:build:production"
+              "browserTarget": "usuarios-web-angular-jwt:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "test-user:build"
+            "browserTarget": "usuarios-web-angular-jwt:build"
           }
         },
         "test": {
@@ -115,19 +115,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "test-user:serve"
+            "devServerTarget": "usuarios-web-angular-jwt:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "test-user:serve:production"
+              "devServerTarget": "usuarios-web-angular-jwt:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "test-user",
-  "cli": {
-    "analytics": "38b74717-e6d0-4cd5-89a7-c147f2cc8558"
-  }
+  "defaultProject": "usuarios-web-angular-jwt"
 }
